Home: mobile,web page alignment fixed

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,5 +1,9 @@
 @import '../../style/constant.scss';
 
+.home-page-container {
+  margin-top: 10rem;
+}
+
 .home-page-main {
   display: block;
   width: 20rem;
@@ -38,7 +42,7 @@
 .home-page-start-button {
   background-color: #000 !important;
   width: 100%;
-  height: 3rem;
+  height: 2.75rem;
   border-radius: 1rem !important;
   color: $liquidNeonColor !important;
 }
@@ -48,6 +52,10 @@
 }
 
 @media only screen and (min-width: $mobile-view-breakpoint) {
+  .home-page-container {
+    margin: 0;
+    height: unset;
+  }
   .home-page-main {
     display: flex;
     width: 47.5rem;
